--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,5 @@ jobs:
         cache: 'npm'
     - run: npm install -g mocha
     - run: npm install
+    - run: npm run build
     - run: npm run test
