--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,6 +17,7 @@ jobs:
         node-version: [10.x, 12.x, 14.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
+    - name: Checkout Code
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -26,4 +27,10 @@ jobs:
     - run: npm install -g mocha
     - run: npm install
     - run: npm build
+    - name: Upload
+    - uses: actions/upload-artifact@v3
+      with:
+        name: upload-site-data
+        path: ./
+    - name: Test Run
     - run: npm test
