--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,22 +18,22 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
     - name: Checkout Code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: NPM installations
-    - run: |
+      run: |
           npm install -g mocha
           npm install
     - name: NPM build
-    - run: npm build
+      run: npm build
     - name: Upload
-    - uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v3
       with:
         name: upload-site-data
         path: .next/
     - name: Test Run
-    - run: npm test
+      run: npm test
