--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: upload-site-data
-        path: .src/
+        path: src/
     - name: Test Run
       run: npm test
