--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,10 +31,21 @@ jobs:
           npm install
     - name: NPM build
       run: npm build
-    - name: Upload
+    - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
         name: upload-site-data
         path: src/
+  test:
+    name: Build-Project
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with
+          name: upload-site-data
+      - name: Test artifact download
+        run: ls -R
     - name: Test Run
       run: npm test
