--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    ""
     "chai": "^4.2.0",
     "mocha": "^7.0.0",
     "nodemon": "^2.0.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "jest": "^27.4.3"
   }
 }
