added test workflow

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,3 +47,5 @@ jobs:
           name: upload-site-data
       - name: Test artifact download
         run: ls -R
+      - name: Test Run
+        run: npm test
