--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "mocha 'src/test/**/*.js'"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
