--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest"
+    "test": "mocha 'src/test/**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,6 @@
     "chai": "^4.2.0",
     "mocha": "^7.0.0",
     "nodemon": "^2.0.2",
-    "supertest": "^4.0.2",
-    "jest": "^27.4.3"
+    "supertest": "^4.0.2"
   }
 }
