--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,10 +41,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: upload-site-data
+          path: src/
       - name: Test artifact download
         run: ls -R
       - name: npm install, and test
