--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,7 +50,6 @@ jobs:
     - name: npm test
       run: |
         npm i -g mocha
-        npm install
-        mocha tests/*
+        npm test
       env:
         CI: true
