--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -67,3 +67,10 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: upload-site-data-test
+    - name: Deploy to Server 1
+      uses: easingthemes/ssh-deploy@main
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+        REMOTE_HOST: ${{ secrets.HOST_DNS }}
+        REMOTE_USER: ${{ secrets.USERNAME }}
+        TARGET: ${{ secrets.TARGET_DIR }}
